# cunha-visivel

./: .gitignore  README.md  image.py  imagesExtractor.py  main.py  pdfExtractor.py  pyproject.toml  requirements.txt  scrap copy.py  scrap.py  scrapmain.py  test.py  text.py  tx.py
assets/: download_log.txt
cunha_visivel/cli/: __init__.py
cunha_visivel/scraping/: __init__.py
cunha_visivel/utils/: folder.py  param_eval.py
cunha_visivel/workdir/: structs.py
front/: .eslintrc.json  README.md  package-lock.json  package.json
front/app/: layout.tsx  page.tsx
front/components/: filters.tsx  layout.tsx  search-input.tsx  search-result-item.tsx  search-top.tsx  skeleton-search-result.tsx
front/hook/: useQueryHandler.ts  useSearchResults.ts
front/pages/api/: search.ts
front/pages/api/search/: index.ts
front/pages/search/: index.tsx
front/prisma/: schema.prisma
front/prisma/migrations/20240708091533_/: migration.sql
front/prisma/migrations/20240714065529_add_inverted_index/: migration.sql
front/prisma/migrations/20240714072341_pdf_link_id_int/: migration.sql
front/store/: useQueryStore.ts
front/types/: index.ts
front/utils/: pagination.ts
insertIntoDB/: insertData.js  package-lock.json  package.json
insertIntoDB/prisma/: schema.prisma
old/: text.py
scrap/: README.md  pyproject.toml
scrap/cunha_visivel/cli/: __init__.py
scrap/cunha_visivel/cli/extract_cli/: __init__.py
scrap/cunha_visivel/cli/sync_cli/: __init__.py
scrap/cunha_visivel/extract_cli/: __init__.py
scrap/cunha_visivel/scraping/: __init__.py
scrap/cunha_visivel/utils/: utils.py  workdir.py
scrap/cunha_visivel/workdir/: operator.py  structs.py  structs_mysql.py
scrap/old/: imagesExtractor.py
(+6 files in other folders)
